SERVER-5797 Uncaught exception in count_slaveok.js

Rewrote the count command in mongos to use ShardStrategy::commandOP and push handling of StaleConfigException to the caller.

Also modified ParallelSortClusteredCursor to handle SyncClusterConnection not allowing the call method to be used on commands.